@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-28T16:17:45Z",
+  "timestamp" : "2022-07-29T01:07:06Z",
   "count_outdated" : 422,
   "uniques_outdated" : 228,
-  "count" : 444,
+  "count" : 445,
   "uniques" : 239,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
