@@ -1,3 +1,10 @@
+2022-07-29T01:07:06Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 228 422 / 239 444
+* notice: next accum: outdated-unq outdated-all / unq all: 228 422 / 239 445
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-28]
+
 2022-07-28T16:17:45Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 227 421 / 239 444
